[package]
name = "time_capsule"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"]}
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
tokio = "1.49.0"
tower = "0.5.3"
tower-http = "0.6.8"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
